--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-streamlit==1.31.0
-pandas==2.1.4
-openpyxl==3.1.2
-pywhatkit==5.4
-selenium>=4.0.0
-webdriver-manager>=4.0.0
-streamlit-gsheets-connection
+streamlit
+pandas
+openpyxl
+pywhatkit
+selenium
+webdriver-manager
+st-gsheets-connection
